--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
   --bla3 : #2C2C2A;
   --bla4 : #464643;
   --rd : #ec4e20;
+  --g: #3FC577;
   --blu : #00A6ED;
   --or : #ff9505;
   --or2 : #FFB627;
